feat: update test command and improve error boundary usage; adjust jest configuration and streamline ErrorBoundary implementation

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
     "lint:all": "yarn lint && yarn lint:prettier:fix",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
